--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
         <button id="changeColorButton">Change Background Color</button>
     </div>
     <script src="script.js"></script>
+<script
+src='//uae.fw-cdn.com/40062489/20658.js'
+chat='true'>
+</script>
+
 </body>
 </html>
