--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 src='//uae.fw-cdn.com/40062489/20658.js'
 chat='true'>
 </script>
-https://www.picktime.com/f21af68d-b3a6-44d2-b6ba-8ba2edc947dc
+
+<a href="https://www.picktime.com/f21af68d-b3a6-44d2-b6ba-8ba2edc947dc" class="ptbkbtn" target="_blank" style="float:none;"><img border="none" src="https://www.picktime.com/img/widgetButtons/BookingPage/picktime-book-online-darkblue.png" alt="Book an appointment with D&#039;S"/></a>
 </body>
 </html>
